hphp/hack/test/typecheck/strict_switch/noreturn_case.php.exp
File "noreturn_case.php", line 9, characters 14-14:
Switching on `nothing` but using constant from `int` (Typing[4023])
  File "noreturn_case.php", line 7, characters 15-20:
  expecting `nothing` based on this
